--- a/app.json
+++ b/app.json
@@ -12,12 +12,12 @@
     },
     "UUID": {
       "description": "用户的主ID",
-      "value": "24b4b1e1-7a89-45f6-858c-242cf53b5bdb",
+      "value": "fb302342-07f1-4fe8-8c7a-6d7a99ad4209",
       "required": false
     },
     "WS_PATH": {
       "description": "websocket路径",
-      "value": "/ray",
+      "value": "/spot",
       "required": true
     }
   },
