--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     },
     "WS_PATH": {
       "description": "websocket路径",
-      "value": "/spot",
+      "value": "/ray",
       "required": true
     }
   },
